Fix collapse button functionality

--- a/resources/assets/css/components/_subpage.scss
+++ b/resources/assets/css/components/_subpage.scss
@@ -511,13 +511,18 @@
   }
 
   .subpage-collapse-description {
-    padding: 0 50px 50px 50px;
+    overflow: hidden;
+    transition: height .5s cubic-bezier(.22,.61,.36,1);
 
     > p {
       line-height: 2;
       margin: 0 0 17px;
       letter-spacing: 0.16em;
     }
+  }
+
+  .subpage-collapse-content {
+    padding: 0 50px 50px 50px;
   }
 
   .hidden {
